--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* Загальні та обнулюючи стилі */
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -23,4 +25,88 @@ body {
 	color: var(--main-color);
 	font-size: 16px;
 	background-color: var(--white-color);
+}
+
+.list {
+	list-style: none;
+}
+
+.link {
+	text-decoration: none;
+}
+
+.btn {
+	cursor: pointer;
+}
+
+/*----------------------------- Шапка----------------------------- */
+.header {}
+
+.container {
+	max-width: 1230px;
+	padding: 0 15px;
+	margin: 0 auto;
+}
+
+.header-container {}
+
+.menu {}
+
+.header-logo>span {}
+
+.logo {
+	color: var(--black-color);
+	font-family: 'Raleway';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 26px;
+	line-height: 1.29;
+	letter-spacing: 0.03em;
+}
+
+.logo>span {
+	color: var(--brand-color);
+}
+
+.menu-list {}
+
+.menu-item {}
+
+.menu-link {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 1.14;
+	letter-spacing: 0.02em;
+	color: var(--main-color);
+	transition: all 0.3s;
+}
+
+.menu-link:hover,
+.menu-link:focus {
+	color: var(--brand-color);
+}
+
+.menu-link:active {
+	color: var(--main-color);
+}
+
+.connection-nav-header {}
+
+.connection-item {}
+
+.header-link {
+	color: var(--descr-color);
+}
+
+.main-link {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 1.14;
+	letter-spacing: 0.02em;
+	transition: all 0.3s;
+}
+
+.main-link:hover,
+.main-link:focus {
+	color: var(--brand-color);
 }
