--- a/css/styles.css
+++ b/css/styles.css
@@ -178,3 +178,55 @@ body {
 .about-item {}
 
 .about-img {}
+
+
+/* ----------------------------- Наша команда ----------------------------- */
+
+.team {}
+
+.team-title {}
+
+.team-list {}
+
+.team-item {}
+
+.team-item-img {}
+
+.team-item-name {
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.19;
+	letter-spacing: 0.03em;
+}
+
+.team-item-descr {
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 1.19;
+	letter-spacing: 0.03em;
+	color: var(--descr-color);
+}
+
+/* ----------------------------- Футер ----------------------------- */
+
+.footer {}
+
+.container {}
+
+.footer-logo {}
+
+.logo {}
+
+.link {}
+
+.footer-address {}
+
+.connection-nav-footer {}
+
+.list {}
+
+.connection-item-footer {}
+
+.footer-link {}
+
+.main-link {}
