--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
 	--hero-btn: #1977c4;
 	--hero-bg: #2F303A;
 	--team-bg: #F5F4FA;
+	--potfolio-btn-bg: #F5F4FA;
 	--white-color: #ffffff;
 	--black-color: #000000;
 }
@@ -201,8 +202,62 @@ body {
 
 .team-item-descr {
 	font-weight: 400;
-	font-size: 16px;
 	line-height: 1.19;
+	letter-spacing: 0.03em;
+	color: var(--descr-color);
+}
+
+/* ----------------------------- Навігація Портфоліо ----------------------------- */
+
+.portfolio-nav {}
+
+.portfolio-list {}
+
+.portfolio-navigation-item+.portfolio-navigation-item {
+	margin-top: 10px;
+}
+
+.navigation-btn {
+	padding: 6px 22px;
+	background-color: var(--potfolio-btn-bg);
+	border-radius: 4px;
+	transition: all 0.3s ease;
+}
+
+.navigation-btn:hover,
+.navigation-btn:focus {
+	background-color: var(--brand-color);
+	color: var(--white-color);
+	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+/* ----------------------------- Продукція ----------------------------- */
+
+.production {}
+
+.production-title {
+	font-size: 0;
+	opacity: 0;
+}
+
+.production-list {}
+
+.production-item {}
+
+.production-link {}
+
+.production-img {}
+
+.production-name {
+	font-size: 18px;
+	line-height: 2;
+	letter-spacing: 0.06em;
+	color: var(--main-color);
+}
+
+.production-descr {
+	font-weight: 400;
+	line-height: 1.88;
 	letter-spacing: 0.03em;
 	color: var(--descr-color);
 }
