--- a/css/styles.css
+++ b/css/styles.css
@@ -2,18 +2,15 @@
 
 * {
 	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-	border: 0;
 }
 
 :root {
 	--brand-color: #2196F3;
+	--hover-btn: #1e81d1;
 	--main-color: #212121;
 	--descr-color: #757575;
 	--footer-link-color: rgba(255, 255, 255, 0.6);
-	--hero-btn: #1977c4;
-	--hero-bg: #2F303A;
+	--secondary-bg: #2F303A;
 	--team-bg: #F5F4FA;
 	--potfolio-btn-bg: #F5F4FA;
 	--white-color: #ffffff;
@@ -26,6 +23,9 @@ body {
 	color: var(--main-color);
 	font-size: 16px;
 	background-color: var(--white-color);
+	margin: 0;
+	padding: 0;
+	border: 0;
 }
 
 .list {
@@ -47,13 +47,6 @@ body {
 }
 
 /* ----------------------------- Шапка----------------------------- */
-.header {}
-
-.header-container {}
-
-.menu {}
-
-.header-logo>span {}
 
 .logo {
 	color: var(--black-color);
@@ -68,10 +61,6 @@ body {
 .logo>span {
 	color: var(--brand-color);
 }
-
-.menu-list {}
-
-.menu-item {}
 
 .menu-link {
 	font-weight: 500;
@@ -90,10 +79,6 @@ body {
 .menu-link:active {
 	color: var(--main-color);
 }
-
-.connection-nav-header {}
-
-.connection-item {}
 
 .header-link {
 	color: var(--descr-color);
@@ -114,7 +99,11 @@ body {
 
 /* ----------------------------- Герой ----------------------------- */
 
-.hero {}
+.hero {
+	text-align: center;
+	background-color: var(--secondary-bg);
+	padding: 200px 0;
+}
 
 .hero-title {
 	font-weight: 900;
@@ -122,17 +111,30 @@ body {
 	line-height: 1.36;
 	letter-spacing: 0.06em;
 	text-transform: uppercase;
-	/* color: var(--white-color); */
+	color: var(--white-color);
+	max-width: 696px;
+	margin: 0 auto;
+	margin-bottom: 30px;
 }
 
 .hero-btn {
+	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	line-height: 1.88;
 	letter-spacing: 0.06em;
-	/* color: var(--white-color); */
+	color: var(--white-color);
+	padding: 10px 32px;
+	border: inherit;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	background-color: var(--brand-color);
+	font-weight: 700;
+	transition: all 0.3s ease;
 }
 
-.benefits {}
+.hero-btn:hover {
+	background-color: var(--hover-btn);
+}
 
 .benefits-title {
 	font-size: 0;
@@ -141,10 +143,6 @@ body {
 	padding: 0;
 	border: 0;
 }
-
-.benefits-list {}
-
-.benefits-item {}
 
 .benefits-item-title {
 	font-size: 14px;
@@ -163,35 +161,16 @@ body {
 
 /* ----------------------------- Чим ми займаємось ----------------------------- */
 
-.about {}
-
-.about-title {}
-
 .title {
 	font-weight: 700;
 	font-size: 36px;
 	line-height: 1.17;
 	letter-spacing: 0.03em;
+	margin-bottom: 50px;
+	text-align: center;
 }
 
-.about-list {}
-
-.about-item {}
-
-.about-img {}
-
-
 /* ----------------------------- Наша команда ----------------------------- */
-
-.team {}
-
-.team-title {}
-
-.team-list {}
-
-.team-item {}
-
-.team-item-img {}
 
 .team-item-name {
 	font-weight: 500;
@@ -208,10 +187,6 @@ body {
 }
 
 /* ----------------------------- Навігація Портфоліо ----------------------------- */
-
-.portfolio-nav {}
-
-.portfolio-list {}
 
 .portfolio-navigation-item+.portfolio-navigation-item {
 	margin-top: 10px;
@@ -233,20 +208,10 @@ body {
 
 /* ----------------------------- Продукція ----------------------------- */
 
-.production {}
-
 .production-title {
 	font-size: 0;
 	opacity: 0;
 }
-
-.production-list {}
-
-.production-item {}
-
-.production-link {}
-
-.production-img {}
 
 .production-name {
 	font-size: 18px;
@@ -264,9 +229,14 @@ body {
 
 /* ----------------------------- Футер ----------------------------- */
 
-.footer {}
+.footer {
+	background-color: var(--secondary-bg);
+	padding: 60px 0;
+}
 
-.footer-logo {}
+.footer-logo {
+	color: var(--white-color);
+}
 
 .footer-address {
 	font-style: normal;
@@ -274,17 +244,13 @@ body {
 	font-size: 14px;
 	line-height: 1.17;
 	letter-spacing: 0.03em;
-	/* color: var(--white-color); */
+	color: var(--white-color);
 }
-
-.connection-nav-footer {}
-
-.connection-item-footer {}
 
 .footer-link {
 	font-weight: 400;
 	font-size: 14px;
 	line-height: 1.71;
 	letter-spacing: 0.03em;
-	/* color: var(--footer-link-color); */
+	color: var(--footer-link-color);
 }
