--- a/css/styles.css
+++ b/css/styles.css
@@ -193,9 +193,16 @@ body {
 }
 
 .navigation-btn {
+	font-family: 'Roboto';
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.63;
+	letter-spacing: 0.03em;
+	color: var(--main-color);
 	padding: 6px 22px;
 	background-color: var(--potfolio-btn-bg);
 	border-radius: 4px;
+	border: inherit;
 	transition: all 0.3s ease;
 }
 
@@ -221,6 +228,7 @@ body {
 }
 
 .production-descr {
+	font-size: 16px;
 	font-weight: 400;
 	line-height: 1.88;
 	letter-spacing: 0.03em;
